--- a/src/app/pages/admin-flight-management/admin-flight-management.component.scss
+++ b/src/app/pages/admin-flight-management/admin-flight-management.component.scss
@@ -25,7 +25,15 @@
     font-weight: bold;
     color: #146C94;
 }
-
+.font-20{
+    font-size: 20px;
+}
+.font-18{
+    font-size: 18px;
+}
+.hei-40{
+    height: 40px;
+}
 .add-flight {
     float: right;
     white-space: nowrap;
