--- a/src/app/pages/admin-ticket-management/admin-ticket-management.component.scss
+++ b/src/app/pages/admin-ticket-management/admin-ticket-management.component.scss
@@ -10,6 +10,15 @@
     flex-direction: row;
     overflow: hidden
 }
+.font-20{
+    font-size: 20px;
+}
+.font-18{
+    font-size: 18px;
+}
+.hei-40{
+    height: 40px;
+}
 .page-content {
     width: 100%;
     display: inline-block;
