--- a/src/app/pages/booking-ticket/booking-ticket.component.html
+++ b/src/app/pages/booking-ticket/booking-ticket.component.html
@@ -2,16 +2,16 @@
 <app-header-home></app-header-home>
 <app-navbar></app-navbar>
   <div class="container my-5" >
-    <h1 class="text-center my-2 color-2 fw-bold">CHUYẾN BAY</h1>
+    <h1 class="text-center my-2 color-2 fw-bold" style="margin-bottom: 30px !important">DANH SÁCH CHUYẾN BAY</h1>
     <div class="row">
       <div class="col-3">
         <label for="inputText" class="form-label fs-4 color-2 fw-bold ms-5">Tìm mã chuyến bay</label>
       </div>
-      <div class="col-7">
+      <div class="col-7" style="margin-bottom: 10px;margin-top: -10px;height: fit-content;">
         <input type="text" id="inputText" class="form-control form-control-search" placeholder="Nhập mã chuyến bay">
       </div>
       <div class="col-2">
-        <button type="submit" class="btn btn-primary mb-3 background-1 fw-bold btn-search">Tìm kiếm</button>
+        <button type="submit" class="btn btn-primary mb-3 background-1 fw-bold btn-search" style="margin-bottom: 10px;margin-top: -10px;height: fit-content;border-radius: 10px; width: 120px;height: 40px;">Tìm kiếm</button>
       </div>
     </div>
     <div class="row test">
