--- a/src/app/pages/edit-flight/edit-flight.component.html
+++ b/src/app/pages/edit-flight/edit-flight.component.html
@@ -3,7 +3,7 @@
 </div>
 <div class="flight-detail-form">
     <form>
-        <div class="flight-detail-form-title">THÔNG TIN VÉ</div>
+        <h1 style="font-weight: bold;padding-bottom: 10px;color: #146C94;">THÔNG TIN CHUYẾN BAY</h1>
 
         <div class="flight-data-fields">
             <span style="text-align: left;
