--- a/src/app/pages/guest-management/guest-management.component.html
+++ b/src/app/pages/guest-management/guest-management.component.html
@@ -6,17 +6,17 @@
   </div>
   <a routerLink="/admin-dashboard/guest-management/new-account">
     <div class="col-lg-2 col-md-3">
-      <button type="button" class="btn btn-primary" id="btnThem">Thêm tài khoản</button>
+      <button type="button" class="btn btn-primary" id="btnThem" style="height: 50px;background-color:#146C94;">Thêm tài khoản</button>
     </div>
   </a>
 </div>
 <div class="form">
   <div class="row g-3">
     <div class="col-lg-2 col-md-2" id="TimKiem">
-      <label for="select">Tìm kiếm</label>
+      <label for="select" style="font-weight: bold;font-size: 20px;color: #146C94;">Tìm kiếm theo</label>
     </div>
     <div class="col-lg-3 col-md-7">
-      <select class="form-select" aria-label="Default select example" id="select">
+      <select class="form-select" aria-label="Default select example" id="select" style="padding-inline: 10px;border-radius: 10px;border: 2px solid #146C94;">
         <option selected value="HoTen">Họ Tên</option>
         <option value="MaKH">Mã Khách Hàng</option>
         <option value="Phai">Phái</option>
@@ -26,7 +26,7 @@
       </select>
     </div>
     <div class="col-lg-5 col-md-6">
-      <input type="text" class="form-control" id="search" style="padding-left: 15px">
+      <input type="text" class="form-control" id="search" style="padding-left: 15px;border-radius: 10px;border: 2px solid #146C94;">
     </div>
     <div class="col-lg-2 col-md-3" id="btnTimKiem">
       <button type="button" class="btn btn-primary">Tìm kiếm</button>
