--- a/src/app/pages/booking-history/booking-history.component.html
+++ b/src/app/pages/booking-history/booking-history.component.html
@@ -15,22 +15,22 @@
             </div>
         </div>
         <!-- Thanh tim kiem -->
-        <div class="container">
+        <div class="container" >
             <div class="row">
                 <div class="col-3">
-                    <p for="" class=" find-code harder">Tìm mã chuyến bay</p>
+                    <p  for="" class=" find-code harder">Tìm mã chuyến bay</p>
                 </div>
                 <div class="col-6">
                     <input class="form-control" type="text">
                 </div>
-                <div class="col-3">
-                    <button class="btn btn-primary">TÌM</button>
+                <div class="col-3" >
+                    <button style="margin-left: 100px;" class="btn btn-primary">TÌM</button>
                 </div>
             </div>
         </div>
         <!-- Khung thong tin -->
         <div class="container">
-            <div class="row cover" >
+            <div class="row cover" style="padding: 10px;" >
                 <!-- Title -->
                 <div class="col-12 harder">
                     <legend>THÔNG TIN VÉ</legend>
@@ -38,15 +38,15 @@
                 <!-- Thong tin ve -->
                 <div class="row margin-center justify-content-center" >
                     <!-- Tóm tắt vé -->
-                    <div class="col-2 text-center cover mb-3 " >
-                        <p class="demuc lighter">MÃ VÉ</p>
-                        <p class="detail harder">1111</p>
-                        <p class="demuc lighter">NGÀY ĐẶT</p>
-                        <p class="detail harder">NGÀY 8 THÁNG 10 NĂM 2023</p>
+                    <div class="col-2 text-center cover" style="height: 213px;padding-top: 10px;">
+                        <span class="demuc lighter">MÃ VÉ</span><br>
+                        <span class="detail harder">1111</span><br>
+                        <span class="demuc lighter">NGÀY ĐẶT</span><br>
+                        <span class="detail harder" style="font-size: 22px;">NGÀY 8 THÁNG 10 NĂM 2023</span>
                     </div>
                     <!-- Chi tiết vé -->
-                    <div class="col-9 cover margin-left mb-3 mx-3">
-                        <div class="container">
+                    <div class="col-9 cover margin-left mb-3 mx-3" >
+                        <div class="container" style="padding-bottom: 20px;">
                             <div class="row">
                                 <div class="col-8">
                                     <div class="row ">
@@ -94,23 +94,22 @@
                             </div>
                         </div>
                     </div>
-                    <!-- Tóm tắt vé -->
-                    <div class="col-2 text-center cover mb-3 " >
-                        <p class="demuc lighter">MÃ VÉ</p>
-                        <p class="detail harder">1111</p>
-                        <p class="demuc lighter">NGÀY ĐẶT</p>
-                        <p class="detail harder">NGÀY 8 THÁNG 10 NĂM 2023</p>
+                    <div class="col-2 text-center cover" style="height: 213px;padding-top: 10px;">
+                        <span class="demuc lighter">MÃ VÉ</span><br>
+                        <span class="detail harder">1111</span><br>
+                        <span class="demuc lighter">NGÀY ĐẶT</span><br>
+                        <span class="detail harder" style="font-size: 22px;">NGÀY 8 THÁNG 10 NĂM 2023</span>
                     </div>
                     <!-- Chi tiết vé -->
-                    <div class="col-9 cover margin-left mb-3 mx-3">
-                        <div class="container">
+                    <div class="col-9 cover margin-left mb-3 mx-3" >
+                        <div class="container" style="padding-bottom: 20px;">
                             <div class="row">
                                 <div class="col-8">
                                     <div class="row ">
                                         <div class="col-12 lighter">NOI DI - NOI DEN</div>
                                     </div>
                                     <div class="row">
-                                        <div class="col-12 harder bigger" >VIETNAM - THAILAND</div>
+                                        <div class="col-12 harder bigger">VIETNAM - THAILAND</div>
                                     </div>
                                     <div class="row ">
                                         <div class="col-md-6 lighter">
@@ -151,16 +150,15 @@
                             </div>
                         </div>
                     </div>
-                    <!-- Tóm tắt vé -->
-                    <div class="col-2 text-center cover mb-3" >
-                        <p class="demuc lighter">MÃ VÉ</p>
-                        <p class="detail harder">1111</p>
-                        <p class="demuc lighter">NGÀY ĐẶT</p>
-                        <p class="detail harder">NGÀY 8 THÁNG 10 NĂM 2023</p>
+                    <div class="col-2 text-center cover" style="height: 213px;padding-top: 10px;">
+                        <span class="demuc lighter">MÃ VÉ</span><br>
+                        <span class="detail harder">1111</span><br>
+                        <span class="demuc lighter">NGÀY ĐẶT</span><br>
+                        <span class="detail harder" style="font-size: 22px;">NGÀY 8 THÁNG 10 NĂM 2023</span>
                     </div>
                     <!-- Chi tiết vé -->
-                    <div class="col-9 cover margin-left mb-3 mx-3">
-                        <div class="container">
+                    <div class="col-9 cover margin-left mb-3 mx-3" >
+                        <div class="container" style="padding-bottom: 20px;">
                             <div class="row">
                                 <div class="col-8">
                                     <div class="row ">
