change option list

--- a/src/app/pages/admin-flight-management/admin-flight-management.component.html
+++ b/src/app/pages/admin-flight-management/admin-flight-management.component.html
@@ -7,12 +7,16 @@
     <div class="form-field">
       <label for="departure-location" class="font-20">Nơi xuất phát</label><br>
       <select name="arrival-location" id="arrival-location" style="height: 40px;">
-        <option value=""></option>
-        <option value="TPHCM">TPHCM</option>
-        <option value="TPHCM2">TPHCM2</option>
-        <option value="TPHCM3">TPHCM3</option>
-        <option value="TPHCM4">TPHCM4</option>
-        <option value="TPHCM5">TPHCM5</option>
+        <option value="" id=""></option>
+        <option value="VIETNAM" id="VN">Việt Nam</option>
+        <option value="THAILAND" id="TH">Thái Lan</option>
+        <option value="ENGLAND" id="EN">Anh</option>
+        <option value="JAPAN" id="JP">Nhật Bản</option>
+        <option value="AMERICA" id="US">Mỹ</option>
+        <option value="FRANCE" id="FR">Pháp</option>
+        <option value="RUSSIA" id="RU">Nga</option>
+        <option value="SINGAPORE" id="SG">Singapore</option>
+        <option value="HONGKONG" id="HK">Hồng Kông</option>
       </select>
     </div>
     <div class="form-field">
@@ -22,12 +26,16 @@
     <div class="form-field">
       <label for="arrival-location" class="font-20">Nơi đến</label><br>
       <select name="arrival-location" id="arrival-location" style="height: 40px;">
-        <option value=""></option>
-        <option value="TPHCM">TPHCM</option>
-        <option value="TPHCM2">TPHCM2</option>
-        <option value="TPHCM3">TPHCM3</option>
-        <option value="TPHCM4">TPHCM4</option>
-        <option value="TPHCM5">TPHCM5</option>
+        <option value="" id=""></option>
+        <option value="VIETNAM" id="VN">Việt Nam</option>
+        <option value="THAILAND" id="TH">Thái Lan</option>
+        <option value="ENGLAND" id="EN">Anh</option>
+        <option value="JAPAN" id="JP">Nhật Bản</option>
+        <option value="AMERICA" id="US">Mỹ</option>
+        <option value="FRANCE" id="FR">Pháp</option>
+        <option value="RUSSIA" id="RU">Nga</option>
+        <option value="SINGAPORE" id="SG">Singapore</option>
+        <option value="HONGKONG" id="HK">Hồng Kông</option>
       </select>
     </div>
     <div class="form-field" style="justify-content: right;">
