change option list

--- a/src/app/pages/admin-flight-management/admin-flight-management.component.html
+++ b/src/app/pages/admin-flight-management/admin-flight-management.component.html
@@ -43,7 +43,7 @@
     </div>
   </form>
   <div class="flight-search">
-    <label for="flight-id" class="font-18">Tìm kiếm theo mã chuyến bay</label>
+    <label for="flight-id" class="font-18">Tìm theo mã chuyến</label>
     <input type="text" id="flight-id" name="flight-id" style="margin-left: 60px;height: 40px;">
     <button class="search-flight" style="height: 40px;">Tìm kiếm</button>
   </div>
