rearrange form fields

--- a/src/app/pages/edit-flight/edit-flight.component.html
+++ b/src/app/pages/edit-flight/edit-flight.component.html
@@ -69,29 +69,31 @@
                 <input type="text" id="plane-name" name="plane-name">
             </div>
     
-            <div class="form-field">
-                <label for="price">Giá</label><br>
-                <input type="text" id="price" name="price">
-            </div>
+            
     
             <div class="form-field">
                 <label for="BSN-number">Số lượng ghế BSN</label><br>
                 <input type="text" id="BSN-number" name="BSN-number">
             </div>
-    
+            <div class="form-field">
+                <label for="BSN-number-booked">Số lượng ghế BSN đặt</label><br>
+                <input type="text" id="BSN-number-booked" name="BSN-number-booked">
+            </div>
             <div class="form-field">
                 <label for="ECO-number">Số lượng ghế ECO</label><br>
                 <input type="text" id="ECO-number" name="ECO-number">
             </div>
     
-            <div class="form-field">
-                <label for="BSN-number-booked">Số lượng ghế BSN</label><br>
-                <input type="text" id="BSN-number-booked" name="BSN-number-booked">
-            </div>
+            
     
             <div class="form-field">
-                <label for="ECO-number-booked">Số lượng ghế ECO</label><br>
+                <label for="ECO-number-booked">Số lượng ghế ECO đặt</label><br>
                 <input type="text" id="ECO-number-booked" name="ECO-number-booked">
+            </div>
+
+            <div class="form-field">
+                <label for="price">Giá</label><br>
+                <input type="text" id="price" name="price">
             </div>
         </div>
         <div class="form-action">
