--- a/src/app/pages/admin-flight-management/admin-flight-management.component.scss
+++ b/src/app/pages/admin-flight-management/admin-flight-management.component.scss
@@ -182,7 +182,7 @@
 .table-container {
     display: flex;
     width: 100%;
-    overflow-x: auto;
+    overflow-x: scroll;
     border-style: solid;
     border-color: #146C94;
     border-width: 3px 3px 3px 3px;
