--- a/src/app/pages/add-flight/add-flight.component.html
+++ b/src/app/pages/add-flight/add-flight.component.html
@@ -48,7 +48,7 @@
     
             <div class="form-field">
                 <label for="flight-time">Giờ bay</label>
-                <input type="time" id="flight-time" name="flight-time">
+                <input type="time" id="flight-time" name="flight-time" step="1">
             </div>
         </div>
 
