--- a/src/app/pages/guest-management/guest-management.component.html
+++ b/src/app/pages/guest-management/guest-management.component.html
@@ -13,7 +13,7 @@
 <div class="form">
   <div class="row g-3">
     <div class="col-lg-2 col-md-2" id="TimKiem">
-      <label for="select" style="font-weight: bold;font-size: 20px;color: #146C94;">Tìm kiếm theo</label>
+      <label for="select">Tìm kiếm</label>
     </div>
     <div class="col-lg-3 col-md-7">
       <select class="form-select" aria-label="Default select example" id="select" style="padding-inline: 10px;border-radius: 10px;border: 2px solid #146C94;">
@@ -36,43 +36,64 @@
 <div class="guest-data-table">
   <div class="table-container">
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 demo-table" style="background-color: white;">
-      <ng-container matColumnDef="id_guest" class="guest-table">
+      <ng-container matColumnDef="MaKhachHang" class="guest-table">
           <th mat-header-cell *matHeaderCellDef> Mã khách hàng </th>
-          <td mat-cell *matCellDef="let element"> {{element.id_guest}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.makhachhang}} </td>
         </ng-container>
       
-        <ng-container matColumnDef="full_name" class="guest-table">
+        <ng-container matColumnDef="HoTenKh" class="guest-table">
           <th mat-header-cell *matHeaderCellDef> Họ và tên </th>
-          <td mat-cell *matCellDef="let element"> {{element.full_name}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.hoTenKh}} </td>
         </ng-container>
-      
-        <ng-container matColumnDef="gender" class="guest-table">
+        <ng-container matColumnDef="Sdt" class="guest-table">
+          <th mat-header-cell *matHeaderCellDef> Điện thoại </th>
+          <td mat-cell *matCellDef="let element"> {{element.sdt}} </td>
+        </ng-container>
+        <ng-container matColumnDef="Phai" class="guest-table">
           <th mat-header-cell *matHeaderCellDef> Phái </th>
-          <td mat-cell *matCellDef="let element"> {{element.gender}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.phai}} </td>
         </ng-container>
       
-        <ng-container matColumnDef="gmail" class="guest-table">
+        <ng-container matColumnDef="GmailKh" class="guest-table">
           <th mat-header-cell *matHeaderCellDef> Gmail </th>
-          <td mat-cell *matCellDef="let element"> {{element.gmail}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.gmailKh}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="id_flight" class="guest-table">
+        <ng-container matColumnDef="MaChuyenBay" class="guest-table">
           <th mat-header-cell *matHeaderCellDef> Mã chuyến </th>
-          <td mat-cell *matCellDef="let element"> {{element.id_flight}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.maChuyenBay}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="id_ticket" >
+        <ng-container matColumnDef="MaVe" class="guest-table">
           <th mat-header-cell *matHeaderCellDef> Mã vé </th>
-          <td mat-cell *matCellDef="let element"> {{element.id_ticket}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.maVe}} </td>
         </ng-container>
-    
+        
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
   </div>
-  <div class="paginator-container">
-    <mat-paginator pageSize="10" hidePageSize="true" showFirstLastButtons>
-    </mat-paginator>
-  </div>
-
+<div class="paginator-container">
+  <mat-paginator pageSize="10" hidePageSize="true" showFirstLastButtons>
+  </mat-paginator>
 </div>
+<!-- <div>
+  <table class="table table-striped">
+    <thead>
+      <th>IDKhachHang</th>
+      <th>HoTen</th>
+      <th>Phai</th>
+      <th>Gmail</th>
+      <th>MaChuyen</th>
+      <th>MaVe</th>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of guestList$|async">
+        <td>{{item.maKh}}</td>
+        <td>{{item.tenKh}}</td>
+        <td>{{item.phai}}</td>
+        <td>{{item.gmailKh}}</td>
+      </tr>
+    </tbody>
+  </table>
+</div> -->
