--- a/src/app/pages/add-flight/add-flight.component.html
+++ b/src/app/pages/add-flight/add-flight.component.html
@@ -14,30 +14,38 @@
             margin: 0px 0px 10px 0px;">Thông tin chuyến bay</span>
             <div class="form-field">
                 <label for="flight-id">Mã chuyến</label>
-                <input type="date" id="flight-id" name="flight-id" class="datepicker-box">
+                <input type="text" id="flight-id" name="flight-id">
             </div>
     
             <div class="form-field">
                 <label for="departure-location">Nơi xuất phát</label><br>
                 <select name="departure-location" id="departure-location">
-                    <option value=""></option>
-                    <option value="TPHCM">TPHCM</option>
-                    <option value="TPHCM2">TPHCM2</option>
-                    <option value="TPHCM3">TPHCM3</option>
-                    <option value="TPHCM4">TPHCM4</option>
-                    <option value="TPHCM5">TPHCM5</option>
+                    <option value="" id=""></option>
+                    <option value="VIETNAM" id="VN">Việt Nam</option>
+                    <option value="THAILAND" id="TH">Thái Lan</option>
+                    <option value="ENGLAND" id="EN">Anh</option>
+                    <option value="JAPAN" id="JP">Nhật Bản</option>
+                    <option value="AMERICA" id="US">Mỹ</option>
+                    <option value="FRANCE" id="FR">Pháp</option>
+                    <option value="RUSSIA" id="RU">Nga</option>
+                    <option value="SINGAPORE" id="SG">Singapore</option>
+                    <option value="HONGKONG" id="HK">Hồng Kông</option>
                 </select>
             </div>
     
             <div class="form-field">
                 <label for="arrival-location">Nơi đến</label><br>
                 <select name="arrival-location" id="arrival-location">
-                    <option value=""></option>
-                    <option value="TPHCM">TPHCM</option>
-                    <option value="TPHCM2">TPHCM2</option>
-                    <option value="TPHCM3">TPHCM3</option>
-                    <option value="TPHCM4">TPHCM4</option>
-                    <option value="TPHCM5">TPHCM5</option>
+                    <option value="" id=""></option>
+                    <option value="VIETNAM" id="VN">Việt Nam</option>
+                    <option value="THAILAND" id="TH">Thái Lan</option>
+                    <option value="ENGLAND" id="EN">Anh</option>
+                    <option value="JAPAN" id="JP">Nhật Bản</option>
+                    <option value="AMERICA" id="US">Mỹ</option>
+                    <option value="FRANCE" id="FR">Pháp</option>
+                    <option value="RUSSIA" id="RU">Nga</option>
+                    <option value="SINGAPORE" id="SG">Singapore</option>
+                    <option value="HONGKONG" id="HK">Hồng Kông</option>
                 </select>
             </div>
     
@@ -48,7 +56,18 @@
     
             <div class="form-field">
                 <label for="flight-time">Giờ bay</label>
-                <input type="time" id="flight-time" name="flight-time">
+                <!-- <input type="time" id="flight-time" name="flight-time" step="1"> -->
+                <input type="number" id="flight-time-hour" name="flight-time-hour" min="0" max="23"
+                oninput="this.value = !!this.value && Math.abs(this.value) <= 23 ? Math.abs(this.value) : null"
+                style="width: 20%;">
+                
+                <input type="number" id="flight-time-minute" name="flight-time-minute" min="0" max="59"
+                oninput="this.value = !!this.value && Math.abs(this.value) <= 59 ? Math.abs(this.value) : null"
+                style="width: 20%;">
+                
+                <input type="number" id="flight-time-second" name="flight-time-second" min="0" max="59"
+                oninput="this.value = !!this.value && Math.abs(this.value) <= 59 ? Math.abs(this.value) : null"
+                style="width: 20%;">
             </div>
         </div>
 
