add ADD method to add-flight component

--- a/src/app/pages/add-flight/add-flight.component.html
+++ b/src/app/pages/add-flight/add-flight.component.html
@@ -156,7 +156,7 @@
             
            
             
-            >Thêm vé</button>
+            >Thêm chuyến bay</button>
         </div>
     </form>
 </div>
