--- a/src/app/pages/admin-flight-management/admin-flight-management.component.html
+++ b/src/app/pages/admin-flight-management/admin-flight-management.component.html
@@ -6,7 +6,8 @@
   <form>
     <div class="form-field">
       <label for="departure-location" class="font-20">Nơi xuất phát</label><br>
-      <select name="arrival-location" id="arrival-location" style="height: 40px;">
+      <select name="arrival-location" id="arrival-location" style="height: 40px;"
+      [(ngModel)]="departureLocation">
         <option value="" id=""></option>
         <option value="VIETNAM" id="VN">Việt Nam</option>
         <option value="THAILAND" id="TH">Thái Lan</option>
@@ -21,11 +22,13 @@
     </div>
     <div class="form-field">
       <label for="departure-date" class="font-20">Ngày xuất phát</label><br>
-      <input type="date" id="departure-date" name="departure-date" class="datepicker-box" style="height: 40px;"><br>
+      <input type="date" id="departure-date" name="departure-date" class="datepicker-box" style="height: 40px;"
+      [(ngModel)]="departureDate"><br>
     </div>
     <div class="form-field">
       <label for="arrival-location" class="font-20">Nơi đến</label><br>
-      <select name="arrival-location" id="arrival-location" style="height: 40px;">
+      <select name="arrival-location" id="arrival-location" style="height: 40px;"
+      [(ngModel)]="arrivalLocation">
         <option value="" id=""></option>
         <option value="VIETNAM" id="VN">Việt Nam</option>
         <option value="THAILAND" id="TH">Thái Lan</option>
@@ -39,17 +42,21 @@
       </select>
     </div>
     <div class="form-field" style="justify-content: right;">
-      <button type="submit" style="height: 40px;">Lọc</button>
+      <button type="submit" style="height: 40px;"
+      (click)="filter($event)"
+      >Lọc</button>
     </div>
   </form>
   <div class="flight-search">
     <label for="flight-id" class="font-18">Tìm theo mã chuyến</label>
-    <input type="text" id="flight-id" name="flight-id" style="margin-left: 60px;height: 40px;">
-    <button class="search-flight" style="height: 40px;">Tìm kiếm</button>
+    <input type="text" id="flight-id" name="flight-id" style="margin-left: 60px;height: 40px;" [(ngModel)]="searchValue">
+    <button class="search-flight" style="height: 40px;" (click)="search($event, searchValue)">Tìm kiếm</button>
   </div>
 
 </div>
-<div class="flight-data-table">
+<div class="flight-data-table"
+*ngIf="flightList.length > 0"
+>
   <div class="table-container">
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 flight-table">
 
@@ -105,13 +112,13 @@
 
       <ng-container matColumnDef="edit">
         <th mat-header-cell *matHeaderCellDef> </th>
-        <td mat-cell *matCellDef="let element"> <button routerLink="/admin-dashboard/edit-flight"
+        <td mat-cell *matCellDef="let element"> <button routerLink="/admin-dashboard/edit-flight/{{element.maChuyenBay}}"
             routerLinkActive="active">Sửa</button> </td>
       </ng-container>
 
       <ng-container matColumnDef="delete">
         <th mat-header-cell *matHeaderCellDef> </th>
-        <td mat-cell *matCellDef="let element"> <button (click)="deleteFlight($event, element.maChuyenBay)">Xóa</button> </td>
+        <td mat-cell *matCellDef="let element"> <button (ngClick)="deleteFlight($event, element.maChuyenBay)">Xóa</button> </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -126,3 +133,7 @@
     </mat-paginator>
   </div>
 </div>
+<p 
+*ngIf="flightList.length <= 0">
+  Không tìm thấy thông tin chuyến bay
+</p>
